--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -2,7 +2,13 @@
     <h2>マイページ</h2>
     <div class="contents mypage_contents">
         <div class="mypage_top text-center">
-            <div class="mypage_top-image"><%= image_tag "user_default.jpg", class:"", alt:"default_image" %></div>
+            <div class="mypage_top-image">
+                <% if @user.image? %>
+                    <%= image_tag @user.image.url %>
+                <% else %>
+                    <%= image_tag "user_default.jpg", class:"", alt:"default_image" %>
+                <% end %>            
+            </div>
             <div class="mypage_top-name"><%= @user.email%></div>
             <div class="mypage_top-parts">
             <% @user.parts.each do |part| %>
