--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -70,7 +70,7 @@
       </table>
     <% else %>
       <div class="alert alert-secondary text-center" role="alert">
-        現在予約中のイベントはありません。
+        現在予約中のメンバーはいません。
       </div>
     <% end %>
   </div>
