--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,6 +14,7 @@
         <th>担当パート</th>
         <th>作成日時</th>
         <th></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -28,6 +29,7 @@
             <% end %>
           </td>
           <td><%= user.created_at.to_s(:date_time_stamp) %></td>
+          <td><%= link_to '詳細', user, class: 'btn btn-outline-dark' %></td>
           <td><%= link_to '削除', user, class: 'btn btn-outline-dark', method: :delete %></td>
         </tr>
       <% end %>
