レイアウト調整

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,5 +1,5 @@
 .event-main{
-    background-color: #FEE071;
+    background-color: #fefefe;
     padding: 4rem 1rem;
     border-radius: 0.3rem;
 }
