--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -8,7 +8,7 @@
                     <p class="reservation-date">日付：<%= reservation.event.date.to_fs(:date_stamp) %></p>
                     <p class="reservation-datetime">時間：<%= reservation.event.start_time.to_s(:time_stamp) %> - <%= reservation.event.end_time.to_s(:time_stamp) %></p>
                     <p class="reservation-event_place">場所：<%= reservation.event.place %></p>
-                    <p><%= button_to 'このイベントをキャンセルする', reservation, class: "btn btn-sm btn-outline-secondary cancel-btn", method: :delete, data: {confirm: "#{reservation.event.title}の予約をキャンセルしますか？"} %></p>
+                    <p><%= button_to 'このイベントをキャンセルする', reservation, { class: "btn btn-sm btn-outline-secondary cancel-btn", method: :delete, form: { data: { turbo_confirm: "#{reservation.event.title}の予約をキャンセルします\r\nよろしいですか？"}}} %></p>
                 </div>
             </div>
         <% end %>
