--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,6 +11,7 @@
         <th>ID</th>
         <th>名前</th>
         <th>メールアドレス</th>
+        <th>管理権限</th>
         <th>担当パート</th>
         <th>作成日時</th>
         <th></th>
@@ -23,6 +24,7 @@
           <td><%= user.id %></td>
           <td><%= user.name %></td>
           <td><%= user.email %></td>
+          <td><%= user.admin %></td>
           <td>
             <% user.parts.each do |part|%>
               <%= part.name %>
@@ -30,7 +32,7 @@
           </td>
           <td><%= user.created_at.to_s(:date_time_stamp) %></td>
           <td><%= link_to '詳細', user, class: 'btn btn-outline-dark' %></td>
-          <td><%= link_to '削除', user, class: 'btn btn-outline-dark', method: :delete %></td>
+          <%# <td><%= button_to "削除", user_registration_path(user), { class: "btn btn-outline-dark", method: :delete, form: { data: { turbo_confirm: "#{user.name}を削除します。\r\nよろしいですか？" } } } %></td>
         </tr>
       <% end %>
     </tbody>
