エラーメッセージ出力形式変更

--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -2,6 +2,8 @@
     <% if flash[:notice] %>
         <p class="alert alert-success text_center"><%= notice %></p>
     <% elsif flash[:alert] %>
-        <p class="alert alert-danger text_center"><%= alert %></p>
+        <% alert.each do |al_msg| %>
+            <p class="alert alert-danger text_center"><%= msg %></p>
+        <% end %>
     <% end %>
 </div>
