--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,5 +1,5 @@
         <% if like %>
-          <%= button_to like_path(event), method: :delete, local: false do %>
+          <%= button_to like_path(event), method: :delete, remote: true do %>
             ♥<%= event.likes.count %>いいね
           <% end %>
         <% else %>
