--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,2 +1,1 @@
-console.log("create");
-$('#likes_buttons_<%= @event.id %>').html("<%= j(render "likes/like", event: @event) %>");
+$('#likes_buttons_<%= @event.id %>').html("<%= j(render "likes/like", event: @event, like: @like ) %>");
