--- a/app/views/likes/destroy.js.erb
+++ b/app/views/likes/destroy.js.erb
@@ -1,2 +1,2 @@
 console.log('destroy');
-$('#likes_buttons_<%= @event.id %>').html("<%= j(render "likes/like", event: @event) %>");
+$('#likes_buttons_<%= @event.id %>').html("<%= j(render "like", event: @event) %>");
