--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,16 +1,14 @@
-        <div class="mypage_top text-center">
-            <div class="mypage_top-image">
-                <% if user.image? %>
-                    <%= image_tag user.image.url %>
-                <% else %>
-                    <%= image_tag "user_default.jpg", class:"", alt:"default_image" %>
-                <% end %>            
-            </div>
-            <div class="mypage_top-name"><%= user.email%></div>
-            <div class="mypage_top-parts">
-            <% user.parts.each do |part| %>
-                <span class="part-item"><%= part.name %></span>
-            <% end %>
-            </div>
-            <div class="mypage_top-profile"><%= user.profile%></div>
-        </div>
+    <div class="user__cont-image">
+        <% if user.image? %>
+            <%= image_tag user.image.url %>
+        <% else %>
+            <%= image_tag "user_default.jpg", class:"", alt:"default_image" %>
+        <% end %>            
+    </div>
+    <div class="user__cont-name"><%= user.email%></div>
+    <div class="user__cont-parts">
+        <% user.parts.each do |part| %>
+            <span class="part-item"><%= part.name %></span>
+        <% end %>
+    </div>
+    <div class="user__cont-profile"><%= user.profile %></div>
