--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -1,13 +1,58 @@
 <div class="container">
-    <h2>マイページ</h2>
-    <div class="contents mypage_contents">
-        <%= render partial: 'profile', locals: { user: @user }%>
-        <ul class="mypage_menu d-flex justify-content-between">
-            <li class="mypage_menu_list"><%= link_to '予約一覧', reservations_path, class:"mypage_menu_list-link" %></li>
-            <li class="mypage_menu_list"><%= link_to 'プロフィール編集', mypage_profile_edit_path, class:"mypage_menu_list-link" %></li>
-            <li class="mypage_menu_list"><%= link_to 'パスワード編集', edit_user_registration_path, class:"mypage_menu_list-link" %></li>
-            <li class="mypage_menu_list"><%= button_to 'ログアウト', destroy_user_session_path, class:"mypage_menu_list-link", method: :delete %></li>
-        </ul>
+    <h2 class="page__title">マイページ</h2>
+    <div class="row user__box">
+        <div class="user__sidebar col-4">
+            <ul class="user__sidebar-lists">
+                <li class="user__sidebar-list"><%= link_to 'プロフィール編集', mypage_profile_edit_path, class:"user__sidebar-list-link" %></li>
+                <li class="user__sidebar-list"><%= link_to 'パスワード編集', edit_user_registration_path, class:"user__sidebar-list-link" %></li>
+                <li class="user__sidebar-list"><%= button_to 'ログアウト', destroy_user_session_path, class:"user__sidebar-list-link", method: :delete %></li>
+            </ul>
+        </div>
+        <div class="user__cont col-8">
+            <div class="user__cont-main text-center">
+                <%= render partial: 'profile', locals: { user: @user }%>
+            </div>
+            <div class="user__cont-reserved">
+                <h3 class="user__subTitle">予約済みイベント</h3>
+                <% if !@reservations.empty? %>
+                    <% @reservations.each do |reservation| %>
+                        <div class="reservation-contents">
+                            <div class="reservation-event_title"><%= reservation.event.title %></div>
+                            <div class="reservation-event_details">
+                                <p class="reservation-date">日付：<%= reservation.event.date.to_fs(:date_stamp) %></p>
+                                <p class="reservation-datetime">時間：<%= reservation.event.start_time.to_s(:time_stamp) %> - <%= reservation.event.end_time.to_s(:time_stamp) %></p>
+                                <p class="reservation-event_place">場所：<%= reservation.event.place %></p>
+                                <p><%= button_to 'このイベントをキャンセルする', reservation, { class: "btn btn-sm btn-outline-secondary cancel-btn", method: :delete, form: { data: { turbo_confirm: "#{reservation.event.title}の予約をキャンセルします\r\nよろしいですか？"}}} %></p>
+                            </div>
+                        </div>
+                    <% end %>
+                <% else %>
+                    <div class="alert alert-secondary text-center" role="alert">
+                        現在予約中のイベントはありません。
+                    </div>
+                <% end %>
+            </div>
+            <div class="user__cont-likes">
+                <h3 class="user__subTitle">いいねしたイベント</h3>
+                <%# if !@reservations.empty? %>
+                <%# @reservations.each do |reservation| %>
+                <div class="reservation-contents">
+                    <div class="reservation-event_title">イベントタイトル：<%#= reservation.event.title %></div>
+                    <div class="reservation-event_details">
+                        <p class="reservation-date">日付：<%#= reservation.event.date.to_fs(:date_stamp) %></p>
+                        <p class="reservation-datetime">時間：<%#= reservation.event.start_time.to_s(:time_stamp) %> - <%#= reservation.event.end_time.to_s(:time_stamp) %></p>
+                        <p class="reservation-event_place">場所：<%#= reservation.event.place %></p>
+                        <p><%#= button_to 'このイベントをキャンセルする', reservation, { class: "btn btn-sm btn-outline-secondary cancel-btn", method: :delete, form: { data: { turbo_confirm: "#{reservation.event.title}の予約をキャンセルします\r\nよろしいですか？"}}} %></p>
+                    </div>
+                </div>
+            <%# end %>
+            <%# else %>
+                <div class="alert alert-secondary text-center" role="alert">
+                    いいねしたイベントはありません。
+                </div>
+            <%# end %>
+
+            </div>
         </div>
     </div>
 </div>
