--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,6 +1,6 @@
       <div class="row row-cols-3">
         <% events.each do |event| %> 
-          <div class="col-md-4">
+          <div class="col-sm-4">
             <div class="card mb-4 shadow-sm" width="20rem;">
               <% if event.image.file %>
                 <%= image_tag event.image.url, class:"card-img-top", alt:"event_image" %>
