--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,6 +4,7 @@
       <div class="ml-auto events__link-box">
           <% if current_user.admin %>
             <%= link_to '編集', edit_event_path(@event), class: 'btn btn-outline-dark' %>
+            <%= link_to '一覧へ戻る', events_path, class: 'btn btn-outline-dark' %>
           <% end %>
       </div>
     </div>
