--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -15,12 +15,12 @@
 
         <div class="form-group">
             <%= f.label :start_time, '開始時刻' %>
-            <%= f.time_select :start_time, {include_blank: true, minute_step: 15, default: 19.hour + 0.minute } %>
+            <%= f.time_select :start_time, { minute_step: 15 } %>
         </div>
 
         <div class="form-group">
             <%= f.label :end_time, '終了時刻' %>
-            <%= f.time_select :end_time, {include_blank: true, minute_step: 15} %>
+            <%= f.time_select :end_time, { minute_step: 15 } %>
         </div>
 
         <div class="form-group">
