バリデーションエラー対象カラム取得

--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -10,4 +10,9 @@
             <p class="alert alert-danger text_center"><%= alert %></p>
         <% end %>
     <% end %>
+    <% if flash[:attribute] %>
+        <% flash[:attribute].each do |attribute| %>
+            <p class="alert alert-danger text_center"><%= attribute %></p>
+        <% end %>
+    <% end %>
 </div>
