--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,12 +15,8 @@
       <% end %>
 
       <div class="field form-group">
-        <%= f.label :password, class: "form-label" %> <i>(leave blank if you don't want to change it)</i><br />
+        <%= f.label :password, class: "form-label" %>（<%= @minimum_password_length %>文字以上の英数字）<br />
         <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
-        <% if @minimum_password_length %>
-          <br />
-          <em><%= @minimum_password_length %> characters minimum</em>
-        <% end %>
       </div>
 
       <div class="field form-group">
@@ -29,7 +25,7 @@
       </div>
 
       <div class="field form-group">
-        <%= f.label :current_password, class: "form-label" %> <i>(we need your current password to confirm your changes)</i><br />
+        <%= f.label :current_password, class: "form-label" %><br />
         <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
       </div>
 
