エラー移動

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,3 +1,14 @@
+    <% if flash[:valid_alert] %>
+        <% flash[:valid_alert].each do |alert| %>
+            <p class="alert alert-danger text_center"><%= alert %></p>
+        <% end %>
+    <% end %>
+    <% if flash[:attribute] %>
+        <% flash[:attribute].each do |attribute| %>
+            <p class="alert alert-danger text_center"><%= attribute %></p>
+        <% end %>
+    <% end %>
+
     <%= form_for event do |f| %>
         <div class="form-group">
             <%= f.label :title, 'イベントタイトル' %>
