--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -63,7 +63,7 @@
     }
 
     &-main{
-        margin-top: 50px;
+        margin: 30px 0;
         border: #ccc 1px solid;
         border-radius: 0.5rem;
 
@@ -107,3 +107,25 @@
 
  
 // }
+
+.required::after{
+    content: "必須";
+    color: #fff;
+    padding: 2px 5px;
+    background-color: #EC2036;
+    font-size: 12px;
+    border-radius: 5px;
+    margin-left: 3px;
+    vertical-align: middle;
+}
+
+.option::after{
+    content: "任意";
+    color: #fff;
+    padding: 2px 5px;
+    background-color: #666;
+    font-size: 12px;
+    border-radius: 5px;
+    margin-left: 3px;
+    vertical-align: middle;
+}
