--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -11,37 +11,37 @@
 
     <%= form_for event do |f| %>
         <div class="form-group">
-            <%= f.label :title, 'イベントタイトル' %>
+            <%= f.label :title, 'イベントタイトル', class: 'required' %>
             <%= f.text_field :title, class: 'form-control' %>
         </div>
         <div class="form-group">
-            <%= f.label :content, '内容' %>
+            <%= f.label :content, '内容', class: 'required' %>
             <%= f.text_area :content, class: 'form-control', rows: 10 %>
         </div>
 
         <div class="form-group">
-            <%= f.label :date, '開催日' %>
+            <%= f.label :date, '開催日', class: 'required' %><br />
             <%= f.date_select :date, class: 'form-control' %>
         </div>
 
         <div class="form-group">
-            <%= f.label :start_time, '開始時刻' %>
+            <%= f.label :start_time, '開始時刻', class: 'required' %><br />
             <%= f.time_select :start_time, { minute_step: 15 } %>
         </div>
 
         <div class="form-group">
-            <%= f.label :end_time, '終了時刻' %>
+            <%= f.label :end_time, '終了時刻', class: 'required' %><br />
             <%= f.time_select :end_time, { minute_step: 15 } %>
         </div>
 
         <div class="form-group">
-            <%= f.label :place, '開催場所' %>
+            <%= f.label :place, '開催場所', class: 'required' %>
             <%= f.text_field :place, class: 'form-control' %>
         </div>
 
         <div class="form-group">
-             <%= f.label :画像 %><br />
-             <%= f.file_field :image, class: "image" %>
+             <%= f.label :画像, class: 'option' %><br />
+             <%= f.file_field :image, class: 'image' %>
               <p><%= f.check_box :remove_image %>画像を削除する</p>
         </div>
         <%= f.submit '保存', class: 'btn btn-primary' %>
