--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -11,36 +11,38 @@
 
     <%= form_for event do |f| %>
         <div class="form-group">
-            <%= f.label :title, 'イベントタイトル', class: 'required' %>
-            <%= f.text_field :title, class: 'form-control' %>
+            <%= f.label :title, 'イベントタイトル', class: 'label label-required' %>
+            <%= f.text_field :title, class: 'form-control', placeholder: 'セッションイベントVol.1' %>
         </div>
         <div class="form-group">
-            <%= f.label :content, '内容', class: 'required' %>
-            <%= f.text_area :content, class: 'form-control', rows: 10 %>
+            <%= f.label :content, '内容', class: 'label label-required' %>
+            <%= f.text_area :content, class: 'form-control', rows: 10, placeholder: '今回のセッション会では
+"もっと気軽に音楽を"をテーマに音楽の夢を追いかけてる方、好きな方で集まりセッション会&交流会を行います！
+奮ってご参加ください！！' %>
         </div>
 
         <div class="form-group">
-            <%= f.label :date, '開催日', class: 'required' %><br />
+            <%= f.label :date, '開催日', class: 'label label-required' %><br />
             <%= f.date_select :date, class: 'form-control' %>
         </div>
 
         <div class="form-group">
-            <%= f.label :start_time, '開始時刻', class: 'required' %><br />
+            <%= f.label :start_time, '開始時刻', class: 'label label-required' %><br />
             <%= f.time_select :start_time, { minute_step: 15 } %>
         </div>
 
         <div class="form-group">
-            <%= f.label :end_time, '終了時刻', class: 'required' %><br />
+            <%= f.label :end_time, '終了時刻', class: 'label label-required' %><br />
             <%= f.time_select :end_time, { minute_step: 15 } %>
         </div>
 
         <div class="form-group">
-            <%= f.label :place, '開催場所', class: 'required' %>
-            <%= f.text_field :place, class: 'form-control' %>
+            <%= f.label :place, '開催場所', class: 'label label-required' %>
+            <%= f.text_field :place, class: 'form-control', placeholder: '渋谷THEORY MUSIC STUDIO' %>
         </div>
 
         <div class="form-group">
-             <%= f.label :画像, class: 'option' %><br />
+             <%= f.label :画像, class: 'label label-option' %><br />
              <%= f.file_field :image, class: 'image' %>
               <p><%= f.check_box :remove_image %>画像を削除する</p>
         </div>
