--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -34,23 +34,23 @@
             </div>
             <div class="user__cont-likes">
                 <h3 class="user__subTitle">いいねしたイベント</h3>
-                <%# if !@reservations.empty? %>
-                <%# @reservations.each do |reservation| %>
+                <% if !@likes.empty? %>
+                <% @likes.each do |like| %>
                 <div class="reservation-contents">
-                    <div class="reservation-event_title">イベントタイトル：<%#= reservation.event.title %></div>
+                    <div class="reservation-event_title">イベントタイトル：<%= like.event.title %></div>
                     <div class="reservation-event_details">
-                        <p class="reservation-date">日付：<%#= reservation.event.date.to_fs(:date_stamp) %></p>
-                        <p class="reservation-datetime">時間：<%#= reservation.event.start_time.to_s(:time_stamp) %> - <%#= reservation.event.end_time.to_s(:time_stamp) %></p>
-                        <p class="reservation-event_place">場所：<%#= reservation.event.place %></p>
-                        <p><%#= button_to 'このイベントをキャンセルする', reservation, { class: "btn btn-sm btn-outline-secondary cancel-btn", method: :delete, form: { data: { turbo_confirm: "#{reservation.event.title}の予約をキャンセルします\r\nよろしいですか？"}}} %></p>
+                        <p class="reservation-date">日付：<%= like.event.date.to_fs(:date_stamp) %></p>
+                        <p class="reservation-datetime">時間：<%= like.event.start_time.to_s(:time_stamp) %> - <%= like.event.end_time.to_s(:time_stamp) %></p>
+                        <p class="reservation-event_place">場所：<%= like.event.place %></p>
+                        <p><%= button_to 'このイベントをキャンセルする', like, { class: "btn btn-sm btn-outline-secondary cancel-btn", method: :delete, form: { data: { turbo_confirm: "#{like.event.title}の予約をキャンセルします\r\nよろしいですか？"}}} %></p>
                     </div>
                 </div>
-            <%# end %>
-            <%# else %>
+            <% end %>
+            <% else %>
                 <div class="alert alert-secondary text-center" role="alert">
                     いいねしたイベントはありません。
                 </div>
-            <%# end %>
+            <% end %>
 
             </div>
         </div>
