--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -40,7 +40,8 @@
           <td><%= link_to '詳細', user, class: 'btn btn-outline-dark' %></td>
           <td>
             <% unless current_user.id == user.id %>
-              <%= button_to "削除", user_registration_path(user), { class: "btn btn-outline-dark", method: :delete, form: { data: { turbo_confirm: "#{user.name}を削除します。\r\nよろしいですか？" } } } %>
+            <%= button_to "削除", user_registration_path(user), class: "btn btn-outline-dark btn-delete", method: :delete %>
+              <%= button_to "削除", user_registration_path(user), { class: "btn btn-outline-dark", method: :delete, form: { data: { confirm: "削除します" } } } %>
             <% end %>
           </td>
         </tr>
