--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,18 +1,9 @@
 <div class="container">
   <div class="my_edit-box">
-    <h2>パスワード・メールアドレス編集</h2>
+    <h2>メールアドレス編集</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
-
-      <div class="field form-group">
-        <%= f.label :email, class: "form-label label label-required" %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
-      </div>
-
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-      <% end %>
 
       <div class="field form-group">
         <%= f.label :password, class: "form-label" %>（<%= @minimum_password_length %>文字以上の英数字）<br />
