--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="sign_up-box">
-    <h2 class="sign_up-title text-center">メンバー新規作成</h2>
+    <h2 class="sign_up-title text-center title__main">メンバー新規作成</h2>
 
     <div class="sign_up-body">
       <%= form_with model: @user, url: user_registration_path, data: { turbo: false }, local: true do |f| %>
