--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2>予約一覧</h2>
+    <h2 class="title__main">予約一覧</h2>
     <% if !@reservations.empty? %>
         <% @reservations.each do |reservation| %>
             <div class="reservation-contents">
