--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2 class="page__title">マイページ</h2>
+    <h2 class="title__main">マイページ</h2>
     <div class="row user__box">
         <div class="user__sidebar col-4">
             <ul class="user__sidebar-lists">
