--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2>メンバー詳細</h2>
+    <h2 class="title__main">メンバー詳細</h2>
     <div class="contents user_show">
         <%= render partial: 'profile', locals: { user: @user } %>
     </div>
