--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="d-flex align-items-center">
-        <h2>イベント作成</h2>
+        <h2 class="title__main">イベント作成</h2>
         <div class="ml-auto boards__linkBox">
             <%= link_to '一覧へ戻る', events_path, class: 'btn btn-outline-dark' %>
         </div>
