--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,9 +1,9 @@
-        <% if like %>
-          <%= button_to like_path(event), method: :delete, remote: true do %>
+        <% if @like %>
+          <%= button_to like_path(event), method: :delete, turbo: false, remote: true do %>
             ♥<%= event.likes.count %>いいね
           <% end %>
         <% else %>
-          <%= button_to likes_path(event), method: :post, local: false do %>
+          <%= button_to likes_path(event), method: :post, turbo: false,  remote: true do %>
             ♡<%= event.likes.count %>いいね
           <% end %>
         <% end %>
